--- a/sbb/src/main/resources/templates/navbar.html
+++ b/sbb/src/main/resources/templates/navbar.html
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">로그인</a> <!--로그인 텍스트 표시 및 클릭하여 이동할 페이지 설정-->
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/user/signup}">회원 가입</a>
+                </li>
             </ul>
         </div>
     </div>
