--- a/sbb/src/main/resources/templates/question_list.html
+++ b/sbb/src/main/resources/templates/question_list.html
@@ -11,10 +11,13 @@
         </thead>
         <tbody>
             <tr th:each="question, loop : ${paging}">
-                <td th:text="${loop.count}"></td>
+                <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
                 <td>
                     <a th:href="@{|/question/detail/${question.id}|}" 
                     th:text="${question.subject}"></a> <!-- 페이지 이동 링크 추가 -->
+                    <span class="text-danger small ms-2" 
+                    th:if="${#lists.size(question.answerList) > 0}"
+                    th:text="${#lists.size(question.answerList)}"></span><!--답변 개수 표시-->
                 </td>
                 <td th:text="${#temporals.format(question.createDate,
                 'yyyy-MM-dd HH:mm')}"></td>
