--- a/sbb/src/main/resources/templates/navbar.html
+++ b/sbb/src/main/resources/templates/navbar.html
@@ -10,7 +10,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent"> <!-- 화면 크기에 따라 내비게이션 바의 메뉴 노출을 관리 -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"> <!-- 내비게이션 바의 메뉴 오른쪽과 왼쪽 여백을 지정 -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">로그인</a> <!--로그인 텍스트 표시 및 클릭하여 이동할 페이지 설정-->
+                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a> <!--로그인 텍스트 표시 및 클릭하여 이동할 페이지 설정-->
+                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a> <!-- sec:authorize="isAnonymous()": 로그인되지 않은 경우에 해당 요소(로그인 링크)가 표시 / sec:authorize="isAuthenticated() : 로그인된 경우에 해당 요소(로그아웃 링크)가 표시" -->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/user/signup}">회원 가입</a>
