--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -9,6 +9,10 @@
             th:text="${question.content}"></div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">
+                        <span th:if="${question.author != null}"
+                        th:text="${question.author.username}"></span>
+                    </div>
                     <div th:text="${#temporals.format(question.createDate,
                         'yyyy-MM-dd HH:mm')}"></div>
                 </div>
@@ -25,6 +29,10 @@
             th:text="${answer.content}"></div>
             <div class="d=flex justify-content-end">
                 <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">
+                        <span th:if="${answer.author != null}"
+                        th:text="${answer.author.username}"></span>
+                    </div>
                     <div th:text="${#temporals.format(answer.createDate,
                         'yyyy-MM-dd HH:mm')}"></div>
                 </div>
@@ -39,7 +47,8 @@
             <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
         </div> -->
         <div th:replace="~{form_errors :: formErrorsFragment}"></div>
-        <textarea th:field="*{content}" id="content" rows="10" class="form-control"></textarea>
+        <textarea sec:authorize="isAnonymous()" disabled th:field="*{content}" class="form-control" rows="10"></textarea>
+        <textarea sec:authorize="isAuthenticated()" th:field="*{content}" class="form-control" rows="10"></textarea>
         <input type="submit" value="답변 등록" class="btn btn-primary my-2">
     </form>
 </div>
