--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -8,6 +8,12 @@
             <div class="card-text" style="white-space: pre-line;"
             th:text="${question.content}"></div>
             <div class="d-flex justify-content-end">
+                <div th:if="${question.modifyDate != null}" class="badge bg-light
+                text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modified at</div>
+                    <div th:text="${#temporals.format(question.modifyDate,
+                        'yyyy-MM-dd HH:mm')}"></div>
+                </div> <!-- 질문 수정일시 -->
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">
                         <span th:if="${question.author != null}"
@@ -16,6 +22,17 @@
                     <div th:text="${#temporals.format(question.createDate,
                         'yyyy-MM-dd HH:mm')}"></div>
                 </div>
+            </div>
+            <div class="my-3">
+                <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm 
+                btn-outline-secondary" sec:authorize="isAuthenticated()"
+                th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+                th:text="수정"></a>
+                <a href="javascript:void(0);" th:data-uri="@{|/question/delete/${question.id}|}"
+                class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"
+                th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+                th:text="삭제"></a> <!-- href에 삭제를 위한 URL을 직접 사용하지 않고 이러한 방식을 사용한 이유는 [삭제]버튼 클릭시 '정말로 삭제하시겠습니까?' 
+                와 같은 메시지와 함께 별도의 확인 절차를 중간에 끼워넣기 위함함-->
             </div>
         </div>
     </div>
@@ -28,6 +45,12 @@
             <div class="card-text" style="white-space: pre-line;"
             th:text="${answer.content}"></div>
             <div class="d=flex justify-content-end">
+                <div th:if="${answer.modifyDate != null}" class="badge bg-light
+                text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modified at</div>
+                    <div th:text="${#temporals.format(answer.modifyDate,
+                        'yyyy-MM-dd HH:mm')}"></div>
+                </div>
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">
                         <span th:if="${answer.author != null}"
@@ -36,6 +59,14 @@
                     <div th:text="${#temporals.format(answer.createDate,
                         'yyyy-MM-dd HH:mm')}"></div>
                 </div>
+            </div>
+            <div class="my-3">
+                <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
+                sec:authorize="isAuthenticated()" th:if="${answer.author != null and #authentication.getPrincipal().
+                getUsername() == answer.author.username}" th:text="수정"></a>
+                <a href="javascript:void(0);" th:data-uri="@{|/answer/delete/${answer.id}|}" class="delete btn btn-sm btn-outline-secondary"
+                sec:authorize="isAuthenticated()" th:if="${answer.author != null and #authentication.getPrincipal().
+                getUsername() == answer.author.username}" th:text="삭제"></a>
             </div>
         </div>
     </div>
@@ -52,4 +83,14 @@
         <input type="submit" value="답변 등록" class="btn btn-primary my-2">
     </form>
 </div>
+<script layout:fragment="script" type="text/javascript">
+const delete_elements = document.getElementsByClassName("delete");
+Array.from(delete_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+</script>
 </html>
