--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -5,8 +5,7 @@
     <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;"
-            th:text="${question.content}"></div>
+            <div class="card-text" th:utext="${@commonUtil.markdown(question.content)}"></div>
             <div class="d-flex justify-content-end">
                 <div th:if="${question.modifyDate != null}" class="badge bg-light
                 text-dark p-2 text-start mx-3">
@@ -24,6 +23,12 @@
                 </div>
             </div>
             <div class="my-3">
+                <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+                    th:data-uri="@{|/question/vote/${question.id}|}">
+                    추천
+                    <span class="badge rounded-pill bg-success"
+                    th:text="${#lists.size(question.voter)}"></span>
+                </a>
                 <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm 
                 btn-outline-secondary" sec:authorize="isAuthenticated()"
                 th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
@@ -42,8 +47,13 @@
     <!--답변 반복 시작-->
     <div class="card my-3" th:each="answer : ${question.answerList}">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;"
-            th:text="${answer.content}"></div>
+            <a th:id="|answer_${answer.id}|"></a> <!-- 앵커 태그 추가 -->
+            <!-- 앵커 태그의 id 속성은 유일한 값이어야 하므로 답변의 id값을 사용 -->
+            <!-- 앵커 태그의 id 속성이 유일하지 않고 중복된 값이 존재한다면 맨 처음 한 개를 제외한 나머지 앵커는 제대로 동작하지 않음 -->
+            <div class="card-text" th:utext="${@commonUtil.markdown(answer.content)}"></div>
+            <!-- 마크다운 적용 
+            th:text를 사용할 경우 HTML 태그들이 이스케이프 처리되어 화면에 그대로 보임
+            마크다운으로 변환된 HTML 문서를 제대로 표시하려면 th:utext를 사용해야 함 -->
             <div class="d=flex justify-content-end">
                 <div th:if="${answer.modifyDate != null}" class="badge bg-light
                 text-dark p-2 text-start mx-3">
@@ -61,6 +71,12 @@
                 </div>
             </div>
             <div class="my-3">
+                <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+                    th:data-uri="@{|/answer/vote/${answer.id}|}">
+                    추천
+                    <span class="badge rounded-pill bg-success"
+                    th:text="${#lists.size(answer.voter)}"></span>
+                </a>
                 <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
                 sec:authorize="isAuthenticated()" th:if="${answer.author != null and #authentication.getPrincipal().
                 getUsername() == answer.author.username}" th:text="수정"></a>
@@ -88,6 +104,14 @@ const delete_elements = document.getElementsByClassName("delete");
 Array.from(delete_elements).forEach(function(element) {
     element.addEventListener('click', function() {
         if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+const recommend_elements = document.getElementsByClassName("recommend");
+Array.from(recommend_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 추천하시겠습니까?")) {
             location.href = this.dataset.uri;
         };
     });
