--- a/sbb/src/main/resources/templates/question_list.html
+++ b/sbb/src/main/resources/templates/question_list.html
@@ -1,6 +1,17 @@
 <!-- <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}"> -->
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container my-3">
+    <div class="row my-3">
+        <div class="col-6">
+            <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+        </div>
+        <div class="col-6">
+            <div class="input-group">
+                <input type="text" id="search_kw" class="form-control" th:value="${kw}">
+                <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+            </div>
+        </div>
+    </div>
     <table class="table">
         <thead class="table-dark">
             <tr class="text-center">
@@ -31,7 +42,7 @@
     <div th:if="${!paging.isEmpty()}">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'"> <!-- 이전 페이지 없으면 링크 비활성화 -->
-                <a class="page-link" th:href="@{|?page=${paging.number-1}|}"> <!-- 이전 페이지 링크 생성 -->
+                <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number-1}"> <!-- 이전 페이지 링크 생성 -->
                     <span>이전</span>
                 </a>
             </li>
@@ -39,16 +50,40 @@
             th:if="${page >= paging.number-5 and page <= paging.number+5}" 
             th:classappend="${page == paging.number} ? 'active'" class="page-item">
                 <a th:text="${page}" class="page-link" 
-                th:href="@{|?page=${page}|}"></a>
+                href="javascript.void(0)" th:data-page="${page}"></a>
             </li>
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'"> <!-- 다음 페이지 없으면 링크 비활성화 -->
-                <a class="page-link" th:href="@{|?page=${paging.number+1}|}"> <!-- 다음 페이지 링크 생성 -->
+                <a class="page-link" href="javascript.void(0)" th:data-page="${paging.number+1}"> <!-- 다음 페이지 링크 생성 -->
                     <span>다음</span>
                 </a>
             </li>
         </ul>
     </div>
     <!-- 페이징 처리 끝 -->
-    <a th:href="@{/question/create}" class="btn-primary">질문 등록하기</a>
+    <!-- <a th:href="@{/question/create}" class="btn-primary">질문 등록하기</a> -->
+    <form th:achtion="@{question/list}" method="get" id="searchForm">
+        <input type="hidden" id="kw" name="kw" th:value="${kw}">
+        <input type="hidden" id="page" name="page" th:value="${paging.number}">
+    </form>
+    <!-- GET 방식 사용 이유
+     POST 방식으로 검색과 페이징을 처리한다면 웹 브라우저에서 '새로고침' 또는 '뒤로가기'를 했을 때 '만료된 페이지입니다'라는 오류를 만날 것임
+     브라우저는 동일한 POST 요청이 발생할 경우, 예를 들어 2페이지에서 3페이지로 이동한 후 '뒤로가기'를 통해 2페이지로 이동하는 것과 같은 중복 요청을 방지하기 위해
+     '만료된 페이지입니다'라는 오류를 발생시키기 때문
+     이러한 이유로 여러 매개변수를 조합하여 게시물 목록을 조회할 경우 GET 방식을 사용하는 것을 권장-->
 </div>
+<script layout:fragment="script" type="text/javascript">
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        document.getElementById('page').value = this.dataset.page;
+        document.getElementById('searchForm').submit();
+    });
+});
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function() {
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    document.getElementById('page').value = 0; // 검색 버튼을 클릭할 경우 0페이지부터 조회
+    document.getElementById('searchForm').submit();
+});
+</script>
 </html>
